--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,14 @@
 }
 
 h1 {
-  color: blue;
+  color: black;
   font-size: 175%;
   text-align: center;
 }
 
 section {
   border: 1px solid black;
-  background-color: bisque;
+  background-color: gray;
   height: 250px;
   overflow: auto;
 }
@@ -19,28 +19,28 @@ section {
 h2 {
   float: right;
   border: 1px solid black;
-  color: lavender;
+  color: black;
   font-size: 125%;
   padding: 5px 20px 5px 20px;
   margin-top: 0;
   margin-bottom: 20px;
 }
 
-ul {
+p {
   clear: right;
   width: 90%;
 }
 
 #chicken {
+  background-color: pink;
+}
+
+#beef {
   background-color: brown;
 }
 
-#pork {
-  background-color: darkorchid;
-}
-
-#steak {
-  background-color: forestgreen;
+#sushi {
+  background-color: bisque;
 }
 
 /********** Desktop version **********/
@@ -153,7 +153,7 @@ ul {
   }
 }
 
-/*--------- Mobile version------*/
+/* Mobile version------*/
 @media (max-width: 767px) {
   .col-sm-1,
   .col-sm-2,
